--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "blogish",
   "version": "1.0.0",
   "main": "index.js",
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -21,6 +24,7 @@
     "prop-types": "^15.8.1"
   },
   "devDependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "nodemon": "^3.1.4"
   }
