--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon api/index.js",
     "vercel-build": "echo yo",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
