Set-up frontend-writer and prepped for deployment
Duplicated reader frontend for writer and setup
vercel.json and vite.configs to easily deploy both
frontends.

--- a/package.json
+++ b/package.json
@@ -6,6 +6,14 @@
     "packages/*"
   ],
   "scripts": {
+    "dev:shared": "npm run dev --workspace=packages/shared",
+    "dev:frontend-r": "npm run dev --workspace=packages/frontend-reader",
+    "dev:frontend-w": "npm run dev --workspace=packages/frontend-writer",
+    "dev:all": "npm-run-all dev:shared dev:frontend-r dev:frontend-w",
+    "build:shared": "npm run build --workspace=packages/shared",
+    "build:frontend-r": "npm run build --workspace=packages/frontend-reader",
+    "build:frontend-w": "npm run build --workspace=packages/frontend-writer",
+    "build:all": "npm-run-all build:shared build:frontend-r build:frontend-w",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -26,6 +34,7 @@
   "devDependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "npm-run-all": "^4.1.5"
   }
 }
