--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.25.1"
+    "react-router-dom": "^6.25.1",
+    "date-fns": "^3.6.0"
+
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
@@ -21,7 +23,9 @@
     "vite": "^4.2.0"
   },
   "peerDependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.25.1",
+    "date-fns": "^3.6.0"
   }
 }
