--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,7 +1,8 @@
 {
   "name": "shared",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/shared-components.umd.js",
+  "module": "dist/shared-components.es.js",
   "scripts": {
     "dev": "vite build --watch",
     "build": "vite build"
@@ -14,7 +15,6 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
     "date-fns": "^3.6.0"
-
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
