--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
   "description": "",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "date-fns": "^3.6.0",
     "express": "^4.19.2",
     "express-async-handler": "^1.2.0",
     "express-validator": "^7.1.0",
@@ -30,8 +29,7 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "prop-types": "^15.8.1",
-    "react-router-dom": "^6.25.1"
+    "prop-types": "^15.8.1"
   },
   "devDependencies": {
     "cors": "^2.8.5",
