--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,8 +1,7 @@
 {
   "name": "shared",
   "version": "1.0.0",
-  "main": "dist/shared-components.umd.js",
-  "module": "dist/shared-components.es.js",
+  "main": "index.js",
   "scripts": {
     "dev": "vite build --watch",
     "build": "vite build"
@@ -11,10 +10,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.25.1",
-    "date-fns": "^3.6.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
@@ -23,9 +20,7 @@
     "vite": "^4.2.0"
   },
   "peerDependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.25.1",
-    "date-fns": "^3.6.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
