--- a/packages/frontend-reader/package.json
+++ b/packages/frontend-reader/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "date-fns": "^3.6.0"
+
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
