--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
-    "buildCommand": "npm run build:all",
-    "outputDirectory": "dist",
+    "buildCommand": "cd packages/frontend && npm run build",
+    "outputDirectory": "packages/frontend/dist",
     "framework": "vite",
     "rewrites": [
       {
