--- a/packages/frontend-reader/package.json
+++ b/packages/frontend-reader/package.json
@@ -13,7 +13,8 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "shared": "workspace:*"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
