--- a/packages/frontend-reader/package.json
+++ b/packages/frontend-reader/package.json
@@ -13,8 +13,7 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "shared": "workspace:*"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
