--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -20,10 +20,10 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "prop-types": "^15.8.1"
+    "prop-types": "^15.8.1",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
-    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "nodemon": "^3.1.4"
   }
